# oopstracker

./: .gitignore  .oopsignore  AST_REFACTORING_REPORT.md  DEPENDENCY_ANALYSIS_REPORT.md  DUPLICATE_ANALYSIS.md  FINAL_VERIFICATION_REPORT.md  IMPROVEMENT_IDEAS.md  INTEGRATION_PROPOSAL.md  LAYERED_REFACTORING.md  LICENSE  LLM_INITIALIZATION_DELAY_ANALYSIS.md  LLM_INTEGRATION_STATUS.md  README.md  REFACTORING_REPORT.md  REFACTORING_SUMMARY.md  ROADMAP.md  aaaa!  analyze_splitting_failure.py  analyze_test_results.py  claude_code_history.txt  clean.py  debug_check_timing.py  debug_llm_init.py  debug_slow_check.py  debug_splitting_process.py  design_server.md  example.py  fix_llm_prompting.py  llm_error_solution_summary.md  llm_response_error_analysis.md  pyproject.toml  semantic_analyzer_fix.py  test.db-shm  test.db-wal  test_5000_files_mock.py  test_5000_files_mock_simple.py  test_5000_files_mock_v2.py  test_500_functions_fixed.py  test_500_functions_realistic.py  test_ai_clustering.py  (+39 more)
.claude/: backup.json
.claude/hooks/: enforce-uv.sh
docs/: check_command_guide.md  clean_architecture_proposal.md  llm_setup.md  trivial_filter.md
examples/: basic_usage.py  clustering_demo.py  evocraft_integration.py  fastapi_client_example.py  simhash_performance_test.py  unified_usage.py
src/oopstracker/: REFACTORING_REPORT.md  REFACTORING_REPORT_AST_SIMHASH.txt  REFACTORING_SEMANTIC_DETECTOR.md  __init__.py  __main__.py  ai_analysis_coordinator.py  ai_analysis_coordinator.py.backup  ai_analysis_coordinator.py.backup2  ai_analysis_models.py  akinator_classifier.py  api_server.py  ast_analyzer.py  ast_analyzer_original.py  ast_analyzer_refactored.py  ast_database.py  ast_simhash_detector.py  ast_simhash_detector_backup.py  ast_simhash_detector_layered.py  ast_simhash_detector_refactored.py  ast_simhash_detector_refactored_original.py  ast_structure_extractor.py  classification_rule_repository.py  classification_rules.py  cli.py  cli_old.py  cli_simplified.py  cluster_metadata_manager.py  clustering_models.py  clustering_strategies.py  clustering_strategy.py  code_filter_utility.py  code_record.py  code_unit_factory.py  component_registry.py  core.py  default_preset_configuration.py  detection_strategy.py  detectors.py  dynamic_pattern_generator.py  efficient_llm_detector.py  (+51 more)
src/oopstracker/ai_analysis/: __init__.py  classification_rules.py  interface.py  llm_manager.py  similarity_analyzer.py
src/oopstracker/analyzers/: __init__.py  result_combiner.py  semantic_analyzer.py  structural_analyzer.py
src/oopstracker/application/: __init__.py  code_analysis_service.py  oopstracker_facade.py
src/oopstracker/ast_analysis/: __init__.py  analyzer.py  ast_analyzer.py  code_unit.py  extractors.py  models.py  similarity.py  similarity_calculator.py  structure_extractor.py  token_builder.py  visitors.py  visitors_v2.py
src/oopstracker/batch/: __init__.py  dynamic_optimizer.py
src/oopstracker/bridges/: __init__.py  intent_tree_bridge.py  semantic_bridge.py  structural_bridge.py
src/oopstracker/clustering_strategies/: __init__.py  base.py  category_based.py
src/oopstracker/commands/: __init__.py  akinator.py  analyze.py  base.py  check.py  check_backup.py  check_original.py  clear.py  list.py  register.py  relations.py
src/oopstracker/core/: __init__.py
src/oopstracker/database/: __init__.py  code_record_repository.py  connection_manager.py  decorators.py  file_tracking_repository.py  schema_manager.py
src/oopstracker/detectors/: __init__.py  adaptive_threshold_finder.py  cache_manager.py  duplicate_analyzer.py  graph_builder.py  similarity_detector.py  statistics_collector.py  structural_duplicate_detector.py  top_percent_duplicate_finder.py
test_code/: product_service.py  user_service.py
tests/: __init__.py  conftest.py  test_api_simple.py  test_cli.py  test_code_analyzer.py  test_core.py  test_models.py  test_simhash_calculator.py  test_simhash_detector.py  test_trivial_filter.py
(+99 files in other folders)
